--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,16 @@ cython_debug/
 # Temp folder
 tools/autopatch/temp
 win/tools/autopatch/temp
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
